--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -5,7 +5,7 @@ body {
     /* font-size: 16px; */
     line-height: 1.7;
     color: $color-grey-dark;
-     padding: 3rem; 
+     
 
      box-sizing: border-box;
 }
@@ -22,6 +22,8 @@ body {
     backface-visibility: hidden;
     margin-bottom: 6rem;
 
+    
+
     &--main{
 
         display: block;
@@ -32,6 +34,11 @@ body {
         animation-name: moveInLeft;
         animation-duration: 1s;
         animation-timing-function: ease-out;
+
+        @include respond(phone){
+            letter-spacing: 1rem;
+            font-family: 5rem;
+        }
     
     
     
@@ -46,6 +53,11 @@ body {
         font-weight: 700;
         letter-spacing: 1.75rem;
         animation: moveInRight 1s ease-out;
+
+        @include respond(phone){
+            letter-spacing: .5rem;
+           
+        }
     }
 }
 
@@ -59,6 +71,13 @@ body {
     color: transparent;
     letter-spacing: .2rem;
     transition: all .2s;
+
+    @include respond(tab-port){
+        font-size: 3rem;
+    }
+    @include respond(phone){
+        font-size: 2.5rem;
+    }
 
     &:hover{
         transform:skewY(2deg) skewX(15deg) scale(1.1);
