--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -9,6 +9,10 @@
 
         margin-bottom: $gutter-vertical;
 
+        @include respond(tab-port){
+            margin-right: $gutter-vertical-small;
+        }
+
     }
 
     @include clearfix;
@@ -20,6 +24,14 @@
 
         &:not(:last-child){
             margin-right: $gutter-horizontal;
+
+            @include respond(tab-port){
+                margin-right: 0;
+            }
+        }
+       
+        @include respond(tab-port){
+            width: 100% !important ;
         }
     
     }
